--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -22,7 +22,7 @@
   left: 29.5%;
   margin: -25px 0 0 -79px; /* aplicar a top y al margen izquierdo un valor negativo par*/
 }
-#fondo{
+.fondo{
   background-image: url("https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
   background-repeat: no-repeat;
   height: 927px;
@@ -55,4 +55,16 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 1400px) {
+
+
+  .video {
+    display: none;
+  }
+  .fondo {
+    background: rgba(247, 239, 134, 0.678); /* Cambia el fondo a amarillo */
+    background-image: none; /* Elimina la imagen de fondo */
+  }
 }
