--- a/src/styles/Loading.module.css
+++ b/src/styles/Loading.module.css
@@ -1,8 +1,21 @@
-.load {  
-  font-size: 20px;
-  text-align: center; 
-  font-family: Comic Sans MS; 
-  font-weight:bold; 
-  color: #F29F05; 
-  text-shadow: -1px 0 #414D68, 0 1px #414D68, 1px 0 #414D68, 0 -1px #414D68, -2px 2px 0 #414D68, 2px 2px 0 #414D68, 1px 1px #414D68, 2px 2px #414D68, 3px 3px #414D68, 4px 4px #414D68, 5px 5px #414D68; 
+.load {
+  font-size: clamp(1rem, 3vw, 1.25rem);
+  text-align: center;
+  font-family: Comic Sans MS, cursive;
+  font-weight: bold;
+  color: #F29F05;
+  text-shadow: -1px 0 #414D68, 0 1px #414D68, 1px 0 #414D68, 0 -1px #414D68;
+}
+
+.load img {
+  max-width: 120px;
+  height: auto;
+  margin: 0.5rem auto;
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .load img {
+    max-width: 160px;
   }
+}
